--- a/style.css
+++ b/style.css
@@ -2,11 +2,11 @@ p {
   font-family: Arial;
 }
 body {
-  background-color: lightblue;
+  background-color:DodgerBlue;
 }
 
 h1 {
-  color:Tomato;
+  color:Violet;
   text-align: center;
 }
 
