--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body {ma rgin:0;}
+body {margin:0;}
 
 ul {
   list-style-type: none;
@@ -6,7 +6,7 @@ ul {
   padding: 0;
   overflow: hidden;
   background-color: #333;
-  position: fixed;
+ 
   top: 0;
   width: 100%;
 }
