--- a/pages/style.css
+++ b/pages/style.css
@@ -1,4 +1,6 @@
-body {ma rgin:0;}
+body {
+  margin:0;
+}
 
 ul {
   list-style-type: none;
@@ -31,12 +33,15 @@ li a:hover:not(.active) {
   background-color: #4CAF50;
 }
 
-
+/* the font is Arial */
 p {
   font-family: Arial;
-}
+
+  /* This is the background colour */
+
+
 body {
-  background-color:DodgerBlue;
+  background-color: DodgerBlue;
 }
 
 h1 {
