--- a/style.css
+++ b/style.css
@@ -1,47 +1,46 @@
-body {margin:0;}
+body {
+	margin: 0;
+}
 
 ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
- 
-  top: 0;
-  width: 100%;
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+	background-color: #333;
+	top: 0;
+	width: 100%;
 }
 
 li {
-  float: left;
+	float: left;
 }
 
 li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
+	display: block;
+	color: white;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
 }
 
 li a:hover:not(.active) {
-  background-color: #111;
+	background-color: #111;
 }
 
-
-     .active {
-  background-color: #4CAF50;
+.active {
+	background-color: #4CAF50;
 }
-
 
 p {
-  font-family: Arial;
+	font-family: Arial;
 }
+
 body {
-  background-color:DodgerBlue;
+	background-color: DodgerBlue;
 }
 
 h1 {
-  color:Violet;
-  text-align: center;
+	color: Violet;
+	text-align: center;
 }
-
