--- a/style.css
+++ b/style.css
@@ -46,5 +46,11 @@ h1 {
 	color: Violet;
 	text-align: center;
 }
+/* this is button styling */
+
+.Assignments{
+	margin-top: 100px;
+	margin-left: 50px;
+}
 
          
